--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@upstash/redis": "^1.34.3",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "connect-redis": "^7.1.1",
